--- a/The-Online-Store/src/main/resources/application.properties
+++ b/The-Online-Store/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8989
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/onlinestore
+spring.datasource.url=jdbc:mysql://localhost:3306/online-store
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
